@@ -1,28 +1,0 @@
-Platform for RedHat Enterprise Linux, ES3 is mostly copied from 
-the RedHat 9 platform files.
-
-Before you install Krang you'll need to install MySQL 4.  You can 
-find the MySQL 4 RPMs here:
-
-  http://www.mysql.com/downloads/mysql-4.0.html
-
-Install the server, client, devel and shared RPMs.  After that you
-should be ready to run krang_install.  See INSTALL for details.
-
-NOTE: On RHEL ES3 Krang is setup to start on boot, via a link to
-bin/krang_ctl placed in /etc/init.d and activated using chkconfig.
-
-If you want to build Krang from a source distribution (ex:
-krang-1.013-src.tar.gz), you'll need the following RPMs installed.
-You can install them via up2date (e.g., "up2date libpng-devel").
-
-# up2date gcc \
-          cpp \
-          binutils \
-          glibc-kernheaders \
-          zlib-devel \
-          expat-devel \
-          libjpeg-devel \
-          libungif-devel \
-          libpng-devel
-
